fixed overflow x issue with body

--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -1,6 +1,12 @@
 html,
 body {
   height: 100%;
+  width: 100%;
+}
+
+body {
+
+overflow-x: hidden;
 }
 
 .loader {
@@ -623,11 +629,51 @@ ul li a:hover {
    bottom: 5px;
    text-align: center;
    width: 100%;
+   right: .3vw;
 }
 
 .gradient_bot {
     opacity: 1;
     top: calc(85vh - 0px);
+    bottom: -.1vh;
     background-image: linear-gradient(to top,rgba(0,0,0,.2) 0,rgba(0,0,0,.17) 77%,rgba(0,0,0,.14) 88%,rgba(0,0,0,0) 100%);
 }
 
+.gps_ring {
+    align-self: center;
+    border: 3px solid white;
+    -webkit-border-radius: 30px;
+    height: 18px;
+    width: 18px;
+    position: relative;
+    top: 5.5vh;
+    left:49.5%;
+    -webkit-animation: pulsate 1s ease-out;
+    -webkit-animation-iteration-count: infinite; 
+    opacity: 0.0
+}
+@-webkit-keyframes pulsate {
+    0% {-webkit-transform: scale(0.1, 0.1); opacity: 0.0;}
+    50% {opacity: 1.0;}
+    100% {-webkit-transform: scale(1.2, 1.2); opacity: 0.0;}
+}
+
+.downArrow {
+  top: 10vh;
+  position: relative;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+@media only screen and (max-width: 1026px) {
+    .downArrow {
+        display: none;
+    }
+    .gps_ring {
+        display: none;
+    }
+}
